[package]
name = "succinct-atomic-swap"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
num-bigint = { version = "0.4", features = ["rand"] }
num-bigint-dig = "0.9.1"
num-integer = "0.1.46"
num-traits = "0.2.19"
rand = "0.8"
bitcoin = { version = "0.32.8", features = ["rand", "std", "secp-recovery"]}
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0"
bdk_wallet = "2.3.0"
bitcoincore-rpc = "0.18"
json = "0.12.4"

