[package]
name = "succinct-atomic-swap"
version = "0.1.0"
edition = "2024"

[dependencies]
hex = "0.4.3"
num-bigint = "0.4.6"
num-bigint-dig = "0.9.1"
num-integer = "0.1.46"
num-traits = "0.2.19"
# secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }
rand = "0.8"
bitcoin = { version = "0.32.8", features = ["rand"]}
bitcoincore-rpc = "0.19.0"
